# affentanz

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE_LUA  LICENSE_RAPIDXML  README.md  index.html  params.json
android/: android.toolchain.cmake
android/jni/: Android.mk  Application.mk
assets/: options.cfg
assets/layouts/: MainGuiComponents.xml
assets/mygui/: MyGUI_Fonts.xml
assets/shader/: Debug.material  MyGuiFP.glsles  MyGuiVP.glsles
include/: ConfigLoader.h  Engine.h  Functions.h  HashedString.h  RTShaderHelper.h  Timer.h  iOSBridge.h  rapidxml.hpp
include/components/: Component.h  ComponentManager.h  TransformMotionState.h
include/debug/: DebugView.h  DynamicLineDrawer.hpp  Log.h  PhysicsDebugDraw.h
include/events/: EventLogger.h  EventManager.h  GameEvent.h  IEventListener.h  IEventManager.h
include/lua/: luaconf.h
include/scenes/: ApplicationManager.h  DotScene.h  Fader.h  Scene.h
include/systems/: AnimationSystem.h  CameraSystem.h  GUISystem.h  InputGestureView.h  InputSystem.h  LightSystem.h  MeshSystem.h  PhysicsSystem.h  RenderSystem.h  ScriptingSystem.h  System.h  TouchInputSystem.h  TransformSystem.h  iOSInputSystem.h
ios/: CMakeLists.txt  Info.plist  iOS.cmake
src/: ConfigLoader.cpp  Engine.cpp  HashedString.cpp  Timer.cpp  main.cpp
src/components/: ComponentManager.cpp
src/debug/: DebugView.cpp  DynamicLineDrawer.cpp  PhysicsDebugDraw.cpp
src/events/: EventLogger.cpp  EventManager.cpp
src/scenes/: ApplicationManager.cpp  DotScene.cpp  Fader.cpp
src/systems/: AnimationSystem.cpp  CameraSystem.cpp  GUISystem.cpp  InputGestureView.mm  InputSystem.cpp  LightSystem.cpp  MeshSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  ScriptingSystem.cpp  TouchInputSystem.cpp  TransformSystem.cpp  iOSInputSystem.cpp
